level-11-final-boss/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: level11
  labels:
    name: level11
