level-11-final-boss/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: level11-ingress
  namespace: level11
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/whitelist-source-range: ""
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - level11.silicon-ctf.party
    secretName: tls-secret
  rules:
  - host: level11.silicon-ctf.party
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: level11-service
            port: 
              number: 80
